--- a/parts/res/values/strings.xml
+++ b/parts/res/values/strings.xml
@@ -26,6 +26,13 @@
     <string name="thermal_gaming">Gaming</string>
     <string name="thermal_streaming">Streaming</string>
 
+    <!-- FEAS -->
+    <string name="feas_title">FEAS 2.2</string>
+    <string name="feas_enable_title">Enable FEAS</string>
+    <string name="feas_summary">Optimizes power consumption for each frame</string>
+    <string name="feas_min_freq_limit_level_title">Min freq limit level (MHz)</string>
+    <string name="feas_max_freq_limit_level_title">Max freq limit level (MHz)</string>
+
     <!-- Dolby Atmos -->
     <string name="dolby_title">Dolby Atmos</string>
     <string name="dolby_enable">Use Dolby Atmos</string>
