--- a/parts/res/values-zh-rCN/strings.xml
+++ b/parts/res/values-zh-rCN/strings.xml
@@ -110,5 +110,38 @@
     <string name="dolby_profile_dynamic">动态</string>
     <string name="dolby_off">关闭</string>
     <string name="dolby_on">开启</string>
-    <string name="dolby_on_with_profile">使用 (%1$s)</string>
+    <string name="dolby_on_with_profile">使用(%1$s)</string>
+    <string name="dolby_low">低</string>
+    <string name="dolby_standard">标准</string>
+    <string name="dolby_medium">中</string>
+    <string name="dolby_high">高</string>
+    <string name="dolby_max">最大</string>
+    <string name="dolby_unknown">未知</string>
+    <string name="dolby_preset_title">选择预设</string>
+    <string name="dolby_category_settings">设置</string>
+    <string name="dolby_bass_enhancer">低音增强</string>
+    <string name="dolby_dialogue_enhancer">对话增强</string>
+    <string name="dolby_virtualizer">虚拟环绕声</string>
+    <string name="dolby_stereo_widening">立体声</string>
+    <string name="dolby_volume_leveler">音量级别</string>
+    <string name="dolby_connect_headphones">连接耳机</string>
+    <string name="dolby_reset_profile">重置为默认值</string>
+    <string name="dolby_reset_profile_toast">成功重置(%1$s)的设置</string>
+
+    <!-- Dolby Atmos: Sound Profiles -->
+    <string name="dolby_preset">均衡器预设</string>
+    <string name="dolby_profile_music">音乐</string>
+    <string name="dolby_profile_video">视频</string>
+    <string name="dolby_profile_vocal">人声</string>
+
+    <!-- Dolby Atmos: Equalizer presets -->
+    <string name="dolby_preset_default">默认</string>
+    <string name="dolby_preset_rock">摇滚</string>
+    <string name="dolby_preset_jazz">爵士</string>
+    <string name="dolby_preset_pop">流行</string>
+    <string name="dolby_preset_classical">古典</string>
+    <string name="dolby_preset_hiphop">嘻哈</string>
+    <string name="dolby_preset_blues">蓝调</string>
+    <string name="dolby_preset_electronic">电子</string>
+    <string name="dolby_preset_metal">金属</string>
 </resources>
